# tinyvlm

./: .gitignore  README.md  main.py  pyproject.toml
src/: inference.py  ingest.py  model.py  train.py  utils.py
tests/: infer.py
